--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -155,7 +155,7 @@ Equation~\eqref{eq:outcome} allows the relationship between $\bm{X}^d_{k,a}, \bm
 
 Consider the forecast of life-cycle labor income. In the non-experimental data, we observe labor income from ages 21 to 67 (assumed age of retirement). We use these data to estimate a labor income function which depends on intermediate inputs (an achievement test, education, and lagged labor income, which are affected by treatment in the experimental data). Invariance of this labor income function across treatment regimes and across the experimental and non-experimental samples makes it a valid means for forecasting. In the experimental data, we observe labor income at ages 21 and 30. We evaluate the production function of labor income at age 22 in the experimental data and obtain a forecast. We iterate on this procedure through age 67. At age 30, we observe both a forecast and actual labor income. This provides us with testable implications: The forecasted and observed level of labor income at age 30 should be closely aligned under our invariance assumptions. We provide details on this procedure for the case of labor income next and place in Appendix~\ref{appendix:incomplete} a more technical discussion.
 
-\subsection{Construction a Synthetic Cohort} \label{section:synthetic}
+\subsection{Constructing a Synthetic Cohort} \label{section:synthetic}
 
 We use the Children of the National Longitudinal Survey of Youth (CNLSY) to construct synthetic cohorts from ages 21 to 29. We use both the National Longitudinal Survey of Youth 1979 (NLSY79) and the Panel Study of Income Dynamics (PSID) to forecast from ages 29 to 67. Whenever using the NLSY79 and PSID together, we combine them and use them as a joint sample. Put differently, we use the three data sets to obtain information across our time span of interest, without placing specific weights in any particular sample. This allows us to satisfy support conditions (see Appendix~\ref{app:containsupport}).
 
@@ -167,7 +167,7 @@ In each sample, we place the following restrictions with the objective that non-
 \item \textbf{CNLSY:} Black, labor income less than \$300,000 (2014 USD) at any given year; subjects born between 1978 and 1983.
 \end{enumerate}
 
-Once we place these restrictions, we construct synthetic control and treatment groups by applying Algorithm~\ref{alg:match} in Appendix~\ref{appendix:methodology}. This algorithm provides a weight for each individual in the non-experimental according to her resemblance with the individuals in the experimental sample. When constructing synthetic control and treatment groups, we use each of the following variables at all ages: year of birth, gender, and number of siblings at baseline. The criterion for selecting these variables is availability across all non-experimental datasets. We construct one synthetic control group and one synthetic treatment group in each non-experimental sample (not one group for each age).
+Once we place these restrictions, we construct synthetic control and treatment groups by applying Algorithm~\ref{alg:match} in Appendix~\ref{appendix:methodology}. This algorithm provides a weight for each individual in the non-experimental sample according to her resemblance with the individuals in the experimental sample. When constructing synthetic control and treatment groups, we use each of the following variables at all ages: year of birth, gender, and number of siblings at baseline. The criterion for selecting these variables is availability across all non-experimental datasets. We construct one synthetic control group and one synthetic treatment group in each non-experimental sample (not one group for each age).
 
 In the experimental sample, all of the parents of children with characteristics $\bm{B}_{e} \in \mathcal{B}_0$ agree to participate in the program. In the non-experimental sample, there was no randomized assignment to treatment. We can evaluate our construction of the synthetic control group by comparing average labor income of individuals in the non-experimental sample for whom $\bm{B}_{n} \in \mathcal{B}_0$ to average labor incomes of individuals in our synthetic control group. These two should coincide at each age. Further, they should coincide with observed labor income at age 30 in the experimental sample. Figure~\ref{figure:controltests} displays this test. The agreement is reassuringly close. Note that these comparisons do not involve yet estimation of  $\phi^d_{k,a}\left( \cdot, \cdot \right)$.
 
@@ -190,7 +190,7 @@ Note: Panel (a) displays the forecasted labor income for males in the auxiliary 
 
 \subsection{Finding Intermediate Inputs} \label{section:inputs}
 
-The requirements for the variables to be intermediate inputs are listed in step 2 at the beginning of this section. For labor income, we use the average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income (which is forecasted after age 22). Table~\ref{table:predlaborincome} shows that these variables predict labor income and Appendix~\ref{app:containsupport} documents common support across datasets. Next, we establish the treatment effects generated by the program on these intermediate inputs. This is crucial for our forecasts, as we will impose an economic model in which the forecasted treatment effect is mediated by the treatment effects on these variables. Table~\ref{table:summint} provides a summary.\footnote{We first present raw treatment-control mean differences. As we report in Table~\ref{table:summint}, the treatment effects are substantial across multiple outcomes. In some cases, this finding is at odds with what other studies report. The difference is explained, mainly, by the fact that we consider effects by gender. \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. Only \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} divide the treatment effects by gender. However, they focus on health effects, finding that men have many more positive effects especially in cardiovascular and metabolic conditions. This is consistent with the results we report below.}
+The requirements for the variables to be intermediate inputs are listed in step 2 at the beginning of this section. For labor income, we use the average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income (which is forecasted after age 22). Table~\ref{table:predlaborincome} shows that these variables predict labor income and Appendix~\ref{app:containsupport} documents common support across datasets. Next, we establish the treatment effects generated by the program on these intermediate inputs. This is crucial for our forecasts, as we will impose an economic model in which the forecasted treatment effect is mediated by the treatment effects on these variables. Table~\ref{table:summint} provides a summary.\footnote{We first present raw treatment-control mean differences. As we report in Table~\ref{table:summint}, the treatment effects are substantial across multiple outcomes. In some cases, this finding is at odds with what other studies report \citet{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. The difference is explained, mainly, by the fact that we consider effects by gender.  Only \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} consider treatment effects by gender. They focus on health effects, finding that men have many more positive effects especially in cardiovascular and metabolic conditions. This is consistent with the results we report below.}
 
 \begin{table}[!htpb]
 \begin{threeparttable}
@@ -262,10 +262,6 @@ Note Equations~\eqref{eq:suff1} and~\eqref{eq:suff2} are sufficient conditions f
 
 We briefly summarize tests for these implications here and present a discussion at length in Appendix~\ref{app:invariance}. We first use the experimental sample and ask if, once we account for the variables in $\bm{X}_{k,a}$, $R$ (randomization to treatment assignment in ABC/CARE, which, as discussed, is equivalent to $D$) predicts the outcome of interest, conditional on $\bm{B}_k$. This test verifies that $\bm{X}_{k,a}$ suffices to summarize the treatment generated by $R$. Under the null hypothesis, the coefficient associated with $R$ is zero. Failing to reject this is equivalent to failing to reject invariance across treatment regimes. Similarly, we can assess whether we fail to reject invariance across the samples by verifying that an indicator of sample membership (experimental or auxiliary) is not statistically different from zero when pooling the two samples.
 
-Table~\ref{table:invariance} summarizes these tests. In Panel (a) we test invariance across treatment regimes using the experimental sample. We pool males and females to increase the power of our tests. We provide tests for both employment (as a complement) and labor income at age 30. The coefficient on $R$ is not significant when regressing either employment or labor income on mother's education (as a proxy for $\mathcal{B}_{0}$) and the intermediate inputs. For the case of employment, the test is precise. For the case of labor income, the test is less precise. After accounting for background variables and the intermediate inputs, average labor income is $284$ dollars (2014 USD) higher in the treatment group. This value is relatively low if considering that this is annual labor income at age 30 and the average in the control group is $\$26,084$ (2014 USD). 
-
-In Panel (b) we display tests of invariance in labor income at age 30 across experimental and non-experimental samples. The tests are not as precise as in Panel (a), but, as before, the coefficients associated with the relevant indicator are relatively low if compared with the average of the variable (average labor income in the experimental and non-experimental sample for males and females are $\$40,007$ and $\$24,584$ \,and  $\$32,717$ and $24,098$ (2014 USD), respectively). 
-
 \begin{table}[!htpb]
 \begin{threeparttable}
 \caption{Intermediate Inputs of Labor Income, Summary of Treatment Effects} \label{table:invariance}
@@ -300,6 +296,10 @@ Observations & \multicolumn{2}{c}{380} & \multicolumn{2}{c}{310} \\ \bottomrule
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
+
+Table~\ref{table:invariance} summarizes these tests. In Panel (a) we test invariance across treatment regimes using the experimental sample. We pool males and females to increase the power of our tests. We provide tests for both employment (as a complement) and labor income at age 30. The coefficient on $R$ is not significant when regressing either employment or labor income on mother's education (as a proxy for $\mathcal{B}_{0}$) and the intermediate inputs. For the case of employment, the test is precise. For the case of labor income, the test is less precise. After accounting for background variables and the intermediate inputs, average labor income is $284$ dollars (2014 USD) higher in the treatment group. This value is relatively low if considering that this is annual labor income at age 30 and the average in the control group is $\$26,084$ (2014 USD). 
+
+In Panel (b) we display tests of invariance in labor income at age 30 across experimental and non-experimental samples. The tests are not as precise as in Panel (a), but, as before, the coefficients associated with the relevant indicator are relatively low if compared with the average of the variable (average labor income in the experimental and non-experimental sample for males and females are $\$40,007$ and $\$24,584$ \,and  $\$32,717$ and $24,098$ (2014 USD), respectively). 
 
 \subsection{Following Steps} \label{section:following}
 
@@ -364,7 +364,7 @@ We use health as an illustration because a major contribution of this paper fore
 
 Our auxiliary model for health is an adaptation of the Future Adult Model (FAM). This model forecasts health outcomes from the subjects' mid 30s up to their projected age of death \citep{Goldman_etal_2015_Future-Elderly-Model-Report}.\footnote{The simulation starts at the age in which we observe the subjects' age-30 follow-up.}  Appendix~\ref{appendix:health} discusses the FAM methodology in detail.
 
-FAM passes a variety of specification tests and accurately forecasts health outcomes and healthy behaviors.\footnote{In Appendix~\ref{appendix:health-validation}, we present tests of the model's assumptions and predictive performance for population aggregate health and healthy behavior outcomes.} We initialize the health forecast model with the same variables used to forecast labor and transfer income, along with the initial health conditions as listed in Table~\ref{table:transition}.
+FAM passes a variety of specification tests and accurately forecasts health outcomes and health behaviors.\footnote{In Appendix~\ref{appendix:health-validation}, we present tests of the model's assumptions and predictive performance for population aggregate health and health behavior outcomes.} We initialize the health forecast model with the same variables used to forecast labor and transfer income, along with the initial health conditions as listed in Table~\ref{table:transition}.
 
 Our methodology has five steps: (i) estimate age-by-age health state transition probabilities using the Panel Study of Income Dynamics (PSID); (ii) match these transition probabilities to the ABC/CARE subjects based on observed characteristics; (iii) estimate quality-adjusted life year (QALY) models using the Medical Expenditure Panel Survey (MEPS) and the PSID; (iv) estimate medical cost models using the MEPS and the Medicare Current Beneficiary Survey (MCBS), allowing estimates to differ by health state and observed characteristics; and (v) forecast the medical expenditures and QALYs that correspond to the simulated individual health trajectories.\footnote{As an intermediate step between (i) and (ii), we impute some of the variables used to initialize the FAM models (see  Appendix~\ref{section:FAM_ABC_impute}).}
 
@@ -382,11 +382,11 @@ Note:  This figure displays the life-cycle net present value of forecasted quali
 
 The models estimated using MCBS represent medical costs in the years 2007 to 2010. The MEPS estimation captures costs during 2008 to 2010. To account for real medical cost growth after 2010, we adjust each model's forecast using the method described in  Appendix~\ref{appendix:health-fam-simulation}.
 
-The same procedure is applied to calculate quality-adjusted life years (QALYs). We compute a QALY model based on a widely-used health-related Quality-of-Life (HRQoL) measure (EQ-5D), available in MEPS.\footnote{For a definition and explanation of this instrument, see \citet{Dolan_1997_Modeling_MC,Shaw_etal_2005_EQ5D_MC}.} We then estimate this model using the PSID.
+The same procedure is applied to calculate QALYs. We compute a QALY model based on a widely-used health-related Quality-of-Life (HRQoL) measure (EQ-5D), available in MEPS.\footnote{A QALY is a measure which reweighs a year of life according to its quality given the burden of disease \citep{Dolan_1997_Modeling_MC,Shaw_etal_2005_EQ5D_MC}.} We then estimate this model using the PSID.
 
 We estimate three models of medical spending: (i) Medicare spending (annual medical spending paid by parts A, B, and D of Medicare); (ii) private spending (medical spending paid by a private insurer or paid out-of-pocket by the individual); and (iii) all public spending other than Medicare. Each medical spending model includes the variables we use to forecast labor and transfer income, together with current health, risk factors, and functional status as explanatory variables.
 
-We also calculate medical expenditure before age 30 (see Appendix~\ref{appendix:health-costs-before-age30}). The ABC/CARE interviews at ages 12, 15, 21 and 30 have information related to hospitalizations at different ages and number of births before age 30. We combine this information along with individual and family demographic variables to use MEPS to forecast medical spending for each age.
+We also calculate medical expenditures before age 30 (see Appendix~\ref{appendix:health-costs-before-age30}). The ABC/CARE interviews at ages 12, 15, 21 and 30 have information related to hospitalizations at different ages and number of births before age 30. We combine this information along with individual and family demographic variables to use MEPS to forecast medical spending for each age.
 
 QALYs are crucial for our cost/benefit analysis because they monetize the health of an individual at each age. Figure~\ref{fig:qalys} plots our estimates of mean QALYs together with a PSID comparison for the control sample in an exercise analogous to that used to produce Figure~\ref{fig:labor-income-profiles}.\footnote{In our baseline estimation, we assume that each year of life is worth  $\$150,000$ (2014 USD). Our estimates are robust to substantial variation in this assumption, as we show in  Appendix~\ref{appendix:sensitivity}.} Although there is not a clear age-by-age treatment effect on QALYs, there is a statistically and substantively significant difference in the accumulated present value of the QALYs between the treatment and the control groups. The QALYs for female individuals in the control group match the QALYs of disadvantaged individuals in the PSID. For males, use of the PSID auxiliary sample to construct controls understates the net benefits of ABC/CARE.\footnote{In  Appendix~\ref{appendix:health} we further discuss and justify the parameterizations required to obtain estimates of QALYs. We only consider QALYs starting at age 30. \citet{Goldman_etal_2015_Future-America-Model} examine the sensitivity to these parameterizations and discuss alternative micro-simulations monetizing health condition.}
 
@@ -452,9 +452,13 @@ We accompany these estimates with an extensive set of sensitivity checks of stat
 \end{threeparttable}
 \end{sidewaystable}
 
-Our baseline estimates account for the deadweight loss caused by distortionary taxes to fund programs, plus the direct costs associated with collecting taxes.\footnote{When the transaction between the government and an individual is a direct transfer, we consider 0.5 as the cost per each transacted dollar. We do not weight the final recipient of the transaction (e.g., transfer income). When the transaction is indirect, we classify it as government spending as a whole and consider its cost as 1.5 per dollar spent (e.g., public education).} We assume a marginal tax rate of $50\%$.\footnote{\citet{Feldstein_1999_REStat} reports that the deadweight loss caused by increasing existing tax rates (marginal deadweight loss) may exceed two dollars per dollar of revenue generated. We use a more conservative value (0.5 dollars per dollar of revenue generated). In Tables~\ref{table:bcsens}, \ref{table:irrsens}, and in  Appendix~\ref{appendix:varying-dwl}, we explore the robustness of this decision and find little sensitivity.} Our estimates are robust to dropping it to $0\%$ or doubling it to $100\%$ (deadweight loss columns). Our baseline estimate of benefit/cost ratios is based on a discount rate of $3\%$. Not discounting roughly doubles our benefit/cost ratios, while they remain statistically significant using a higher discount rate of $7\%$ (discount rate columns).
+Our baseline estimates account for the deadweight loss caused by distortionary taxes to fund programs, plus the direct costs associated with collecting taxes.\footnote{When the transaction between the government and an individual is a direct transfer, we consider 0.5 as the cost per each transacted dollar. We do not weight the final recipient of the transaction (e.g., transfer income). When the transaction is indirect, we classify it as government spending as a whole and consider its cost as 1.5 per dollar spent (e.g., public education).} We assume a marginal tax rate of $50\%$.\footnote{\citet{Feldst ein_1999_REStat} reports that the deadweight loss caused by increasing existing tax rates (marginal deadweight loss) may exceed two dollars per dollar of revenue generated. We use a more conservative value (0.5 dollars per dollar of revenue generated). In Tables~\ref{table:bcsens}, \ref{table:irrsens}, and in  Appendix~\ref{appendix:varying-dwl}, we explore the robustness of this decision and find little sensitivity.} Our estimates are robust to dropping it to $0\%$ or doubling it to $100\%$ (deadweight loss columns). Our baseline estimate of benefit/cost ratios is based on a discount rate of $3\%$. Not discounting roughly doubles our benefit/cost ratios, while they remain statistically significant using a higher discount rate of $7\%$ (discount rate columns).
 
-Parental labor income effects induced by the childcare subsidy is an important component of the benefit/cost ratio. We take a conservative approach in our baseline estimates and do not account for potential shifts in parental labor income profiles due to education and work experience subsidized by childcare (see the discussion in Section~\ref{section:pincome}). Our baseline estimates rely solely on parental labor income when participant children are ages 0 to 21. Alternative approaches considering the gain for the parents through age 67 generate an additional increase in the gain due to parental labor income (see parental labor income columns).
+Parental labor income effects induced by the childcare subsidy are an important component of the benefit/cost ratio. We take a conservative approach in our baseline estimates and do not account for potential shifts in parental labor income profiles due to education and work experience subsidized by childcare (see the discussion in Section~\ref{section:pincome}). Our baseline estimates rely solely on parental labor income when participant children are ages 0 to 21. Alternative approaches considering the gain for the parents through age 67 generate an additional increase in the gain due to parental labor income (see parental labor income columns).
+
+Individuals in ABC/CARE could experience positive cohort effects that might (i) make them more productive and therefore experience wage growth \citep{Lagakos_Moll_etal_2016_LifeCycle_NBER}; (ii) experience a negative shock such as an economic crisis and therefore experience a wage decline. Our estimates are robust when we vary annual growth and decay rates in labor income between $-0.5\%$ and $0.5\%$.
+
+We also examine the sensitivity of our estimates to (i) dropping the most costly crimes such as murders and rapes;\footnote{Two individuals in the treatment group were convicted of rape and one individual in the control group was convicted of murder.} and (ii) halving the costs of victimization and judiciary costs related to crime. The first sensitivity check is important because we do not want our estimates to be based on a few exceptional crimes. The second is important because victimization costs are somewhat subjective (see  Appendix~\ref{appendix:crime-VI}). Our cost/benefit estimates are robust to these adjustments, even though crime is a major component of it. We also examine the sensitivity with respect to our main health component: quality-adjusted life years. This is an important component because healthier individuals survive longer, and treatment improves health conditions. It is important to note that this component largely accumulates later in life and therefore is heavily discounted. Dropping the component or doubling the value of life does not have a major impact on our calculations.
 
 \begin{figure}[!htbp]
 \caption{Benefit/Cost Ratio and Internal Rate of Return when Accounting for Different Combinations of the Main Benefits}\label{figure:vennpooled}
@@ -463,10 +467,6 @@ Parental labor income effects induced by the childcare subsidy is an important c
 \footnotesize \justify
 Note: This figure presents all possible combinations of accounting for the benefits from the four major categories in our analysis. The non-overlapping areas present estimates accounting for a single category as the benefit. Where multiple categories overlap, we account for benefits from each of the overlapping categories. The other components remain constant across all calculations and are the same as in Figure~\ref{figure:main}. Health combines QALYs (quality-adjusted life years) and health expenditure. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We put boxes around point estimates that are statistically significant at the $10\%$ level.
 \end{figure}
-
-Individuals in ABC/CARE could experience positive cohort effects that might (i) make them more productive and therefore experience wage growth \citep{Lagakos_Moll_etal_2016_LifeCycle_NBER}; (ii) experience a negative shock such as an economic crisis and therefore experience a wage decline. Our estimates are robust when we vary annual growth and decay rates in labor income between $-0.5\%$ and $0.5\%$.
-
-We also examine the sensitivity of our estimates to (i) dropping the most costly crimes such as murders and rapes;\footnote{Two individuals in the treatment group were convicted of rape and one individual in the control group was convicted of murder.} and (ii) halving the costs of victimization and judiciary costs related to crime. The first sensitivity check is important because we do not want our estimates to be based on a few exceptional crimes. The second is important because victimization costs are somewhat subjective (see  Appendix~\ref{appendix:crime-VI}). Our cost/benefit estimates are robust to these adjustments, even though crime is a major component of it. We also examine the sensitivity with respect to our main health component: quality-adjusted life years. This is an important component because healthier individuals survive longer, and treatment improves health conditions. It is important to note that this component largely accumulates later in life and therefore is heavily discounted. Dropping the component or doubling the value of life does not have a major impact on our calculations.
 
 Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensitivity analyses. It shows the estimated rates of return and benefit/cost ratios when we calculate our estimates under the assumption that only one of the many streams we consider is the source of the benefit. We calculate the estimates with all possible combinations of the main benefit and cost streams. Our measures of economic efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize. We report estimates from a variety of specifications of regressors and functional forms. Our estimates are robust to different plausible assumptions about the values of non-market outcomes, for which conventional estimates of standard errors are not available. Overall, our sensitivity analyses indicate that no single category of outcomes drives the social efficiency of the program. Rather, it is the life-cycle benefits across multiple dimensions of human development.
 
@@ -516,7 +516,7 @@ Our evidence does not indicate that the program has no benefits for females. Whe
 		\includegraphics[width=\textwidth]{output/abccare_npvs1.eps}
 \end{subfigure}
 \footnotesize \justify
-Note: This figure displays the life-cycle net present values of the main components of the cost/benefit analysis of ABC/CARE from birth to forecasted death, discounted to birth at a rate of 3\%. ``Treatment vs. Control'': compares the treatment to the control group. ``Treatment vs. Stay at Home'': compares the treatment group to those subjects who stayed at home. ``Treatment vs. Alternative Preschool'': compares the treatment group to those subjects who attended alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. By ``net" we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs: the total cost of ABC/CARE, including the welfare cost of taxes to finance it. Total net benefits: are for \textit{all} of the components we consider. Labor income: total individual labor income from ages 20 to the retirement of program participants (assumed to be age 67). Parental labor income: total parental labor income of the parents of the participants from when the participants were ages 1.5 to 21. Crime: the total cost of crime (judicial and victimization costs). To simplify the display, the following components are not shown in the figure: (i) cost of alternative preschool paid by the parents of control group children; (ii) the social welfare costs of transfer income from the government; (iii) disability benefits and social security claims; (iv) costs of increased individual and maternal education (including special education and grade retention); (v) total medical public and private costs. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We indicate point estimates significant at the $10\%$ level.\\
+Note: This figure displays the life-cycle net present values of the main components of the cost/benefit analysis of ABC/CARE from birth to forecasted death, discounted to birth at a rate of 3\%. ``Treatment vs. Next Best'': compares the treatment to the control group. ``Treatment vs. Stay at Home'': compares the treatment group to those subjects who stayed at home. ``Treatment vs. Alternative Preschool'': compares the treatment group to those subjects who attended alternative preschools. The latter two are based on matching estimators that account for selection on observable variables. By ``net" we mean that each component represents the total value for the treatment group minus the total value for the control group. Program costs: the total cost of ABC/CARE, including the welfare cost of taxes to finance it. Total net benefits: are for \textit{all} of the components we consider. Labor income: total individual labor income from ages 20 to the retirement of program participants (assumed to be age 67). Parental labor income: total parental labor income of the parents of the participants from when the participants were ages 1.5 to 21. Crime: the total cost of crime (judicial and victimization costs). To simplify the display, the following components are not shown in the figure: (i) cost of alternative preschool paid by the parents of control group children; (ii) the social welfare costs of transfer income from the government; (iii) disability benefits and social security claims; (iv) costs of increased individual and maternal education (including special education and grade retention); (v) total medical public and private costs. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We indicate point estimates significant at the $10\%$ level.\\
 *The treatment vs. stay at home net present value is sizable and negative (-\$123,498.2); its standard error is \$62,745.72.\\
 **QALYs refers to the quality-adjusted life years. Any gain corresponds to better health conditions until forecasted death, with $\$150,000$ (2014 USD) as the base value for a year of life.
 \end{sidewaysfigure}
