--- a/sections/5_gender-differences.tex
+++ b/sections/5_gender-differences.tex
@@ -5,9 +5,9 @@ We rely on econometric methods to identify treatment effects (3) and (4). In the
 
 \textbf{[JJH: Rosenbaum is being misinterpreted.][JLG: You are right, as I believe we discussed in your office. The comparison of the magnitude of the $p$-values is wrong. In that case, and given the small sample sizes, the other tests are \textit{really} going to lack power here. We have tried everything here. I propose that we present the combining functions of the proportion of positive treatment effects for the refined counterfactual comparison, as we use to do. These plots actually began to lead us into the gender differences that we detected. Once we display that pattern, we can then distill the within-boy and within-girl disadvantage.]}
 
-To summarize these treatment effects across categories of outcomes, we provide a count of the number of positive treatment effects for the different counterfactual comparisons. These are based on 126 outcomes reported in Appendix~\ref{appendix:methodology}. Due to lack of power after dividing the control group into staying at home and attending alternative childcares, we rely solely on the combining functions rather than on the exact non-parametric tests listed in Tables~\ref{table:summary} and~\ref{table:massiveall}.\footnote{We adjust for dependence across outcomes and for pretesting in constructing standard errors (see Appendix~\ref{appendix:methodology}). We account for non-random selection into alternative childcare using matching, as described in Section~\ref{sec:parameters}.}
+To summarize these treatment effects across categories of outcomes, we provide a count of the number of positive treatment effects for the different counterfactual comparisons. These are based on 126 outcomes reported in Appendix~\ref{appendix:methodology}. Due to lack of power after dividing the control group into staying at home and attending alternative childcares, we rely solely on these combining functions pooling across all outcomes rather than on the tests listed in Tables~\ref{table:summary} and~\ref{table:massiveall}.\footnote{We adjust for dependence across outcomes and for pretesting in constructing standard errors (see Appendix~\ref{appendix:methodology}). We account for non-random selection into alternative childcare using matching, as described in Section~\ref{sec:parameters}.}
 
-Figures~\ref{fig:ppositive} display the estimated combining functions. Under the null hypothesis, the proportion of positive treatment effects if $0.50$. Men benefit more from treatment when compared to attending alternatives, as opposed to staying at home. For women the benefits are similar in both comparisons according to the combining functions. In Appendix~\ref{appendix:results}, we show that women generally benefit more from treatment if compared to staying at home, as opposed to attending alternatives. We lack the power to verify statistically this pattern using combining functions. 
+Figure~\ref{fig:ppositive} displays the estimated combining functions. Under the null hypothesis, the proportion of positive treatment effects is $0.50$. Men benefit more from treatment when compared to attending alternatives, as opposed to staying at home. For women the benefits are similar in both comparisons according to the combining functions. In Appendix~\ref{appendix:results}, we show that women generally benefit more from treatment compared to staying at home, as opposed to attending alternatives. We lack the power to verify statistically this pattern using combining functions. 
 
 
 \begin{sidewaysfigure}[!htbp]
@@ -88,7 +88,7 @@ The difference in the comparison of treatment to staying at home and alternative
 We formally test the difference in disadvantage across boys and girls in Table~\ref{table:disadtests}. We reject the null of a common distribution of our measure of socioeconomic disadvantage across girls and boys (at baseline). In Panels~\ref{figure:disadgirls} and~\ref{figure:disadboys} of Figure~\ref{figure:socdis}, we further dissect socioeconomic disadvantage within genders, and provide the corresponding tests in Table~\ref{table:disadtests}.
 
 
-Parents of more advantaged girls are more likely to send their daughters to alternative preschools \textbf{[JJH: Do they work more?][Yes, the mothers work more for girls who attend alternative childcare. 23\% of the girls who attend alternative childcare have working mothers while no girls who stay at home have working mothers. The factor to measure disadvantage that we use in Table~\ref{table:disadtests} is comprised of: maternal age, maternal education, maternal IQ, number of siblings, HRI score. All of these are measured at baseline.]}. Parents of more advantaged boys are more likely to send keep their sons at home. This provides an explanation why girls benefited more from treatment if compared to staying at home, which would be a more disadvantaged environment if compared to the male environments. Boys benefited more from treatment when compared to attending alternative childcare given that their parents plausibly sent them to lower-quality alternatives due to a lack of resources or the alternatives were worse complements to home learning environments. \textbf{[JJH: The girls had lower quality environments.]}
+Parents of more advantaged girls are more likely to send their daughters to alternative preschools \textbf{[JJH: Do they work more?][Yes, the mothers work more for girls who attend alternative childcare. 23\% of the girls who attend alternative childcare have working mothers while no girls who stay at home have working mothers. The factor to measure disadvantage that we use in Table~\ref{table:disadtests} is comprised of: maternal age, maternal education, maternal IQ, number of siblings, HRI score. All of these are measured at baseline.]}. Parents of more advantaged boys are more likely to keep their sons at home. Thus, boys benefited more from treatment when compared to attending alternative childcare. \textbf{[JJH: The girls had lower quality environments.]} The opposite pattern holds for girls although our tests lack the power to verify that this difference is as stark as it is for boys.
 
 
 
